tests/invalid/syntax_err_bad_lvalue.c
int main() {
    int a = 2;
    a + 3 = 4;
    return a;
}
// ERROR: Line 3, Error 3005